cmake_minimum_required(VERSION 4.0)
project(CISC220Final LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(SDL_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_STATIC ON CACHE BOOL "" FORCE)
set(SDL_TTF_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_TTF_VENDORED ON CACHE BOOL "" FORCE)
set(SDL_TTF_STATIC ON CACHE BOOL "" FORCE)

add_subdirectory(external/SDL)
add_subdirectory(external/SDL3_ttf)
add_subdirectory(src)
